--- a/src/styles/normal.less
+++ b/src/styles/normal.less
@@ -234,7 +234,7 @@ body {
   overflow-x: hidden;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
-  max-width: 375px; /* 最大宽度，通常对应设计稿宽度 */
+  // max-width: 375px; /* 最大宽度，通常对应设计稿宽度 */
   margin: 0 auto; /* 居中 */
   background-color: #f2f2f2;
   position: relative;
@@ -300,6 +300,16 @@ body {
     opacity: 0;
   }
 }
+
+html[data-device="desktop"] .page {
+  max-width: 375px;
+  margin: 0 auto; /* 居中 */
+  width: 100%;
+}
+html[data-device="mobile"] .page {
+  width: 100%; /* 移动端全屏 */
+}
+
 
 
 
