--- a/public/iconfont/iconfont.css
+++ b/public/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 5069046 */
-  src: url('iconfont.woff2?t=1765266461956') format('woff2'),
-       url('iconfont.woff?t=1765266461956') format('woff'),
-       url('iconfont.ttf?t=1765266461956') format('truetype');
+  src: url('iconfont.woff2?t=1765344780898') format('woff2'),
+       url('iconfont.woff?t=1765344780898') format('woff'),
+       url('iconfont.ttf?t=1765344780898') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-morentouxiang:before {
+  content: "\e71a";
 }
 
 .icon-jiazai:before {
