添加进度条配置，去掉打印

--- a/src/styles/normal.less
+++ b/src/styles/normal.less
@@ -252,6 +252,24 @@ body {
   }
 }
 
+// 默认背景图
+.html-bg-default {
+  background-position: 0px 0px;
+  background-color: #000;
+  // background-image: var(--bg-url);
+  background-size: revert;
+  overflow: hidden;
+}
+
+// 移动端首页
+.html-bg-mobile-home {
+  background-position: 0px 0px;
+  background-color: #000;
+  // background-image: var(--bg-url);
+  background-size: revert;
+  overflow: hidden;
+}
+
 .page-max-width-wrap {
   margin: 0 auto;
   max-width: 1200px;
