--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -1,4 +1,15 @@
 :root {
+  --color-grey: #999;
   --color-price: #ff3000;
   --color-light: #ff6000;
+  --color-red: #eb2606;
+  --adm-color-white: #fff;
+  --adm-color-textLv1: #252834; // 标题
+  --color-textlv2: #9d9ea2; //次级
+  --adm-color-textlv2: #1f2c3c; //标题文案
+  --adm-bg-white: #fff;
+  --adm-color-light: rgba(237, 237, 237, 0.6); //次级按钮
+  --adm-color-dark: rgba(37, 40, 52, 0.6); //副标题
+  --adm-color-primary: #459675; //主色
+  --adm-color-primary-op2: rgba(69, 150, 117, 0.2); //主色-rgba-0.2
 }
