--- a/src/styles/normal.less
+++ b/src/styles/normal.less
@@ -236,7 +236,7 @@ body {
   -webkit-overflow-scrolling: touch;
   // max-width: 375px; /* 最大宽度，通常对应设计稿宽度 */
   margin: 0 auto; /* 居中 */
-  background-color: #f2f2f2;
+  background-color: var(--adm-bg-white);
   position: relative;
 }
 
@@ -319,16 +319,11 @@ body {
   }
 }
 
-html[data-device="desktop"] .page {
+html[data-device='desktop'] .page {
   max-width: 375px;
   margin: 0 auto; /* 居中 */
   width: 100%;
 }
-html[data-device="mobile"] .page {
+html[data-device='mobile'] .page {
   width: 100%; /* 移动端全屏 */
 }
-
-
-
-
-
