--- a/src/styles/normal.less
+++ b/src/styles/normal.less
@@ -7,7 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-size: 12px;
   line-height: normal;
-  color: #000;
+  color: var(--adm-color-textLv1);
   font-family: ui-sans-serif, system-ui, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol,
     Noto Color Emoji;
 }
