--- a/src/styles/theme/ant-btn.less
+++ b/src/styles/theme/ant-btn.less
@@ -71,12 +71,12 @@
 
 //纯色按钮
 .default-btn-solid {
-  background: var(--adm-color-white);
+  background: var(--adm-color-textLv1);
   color: var(--adm-color-white);
   border: none;
   outline: none;
-  border-radius: 10px;
   text-shadow: none;
+  border-radius: 0;
   box-sizing: none !important;
   > div {
     //点击阴影
@@ -85,22 +85,20 @@
   span {
     word-break: keep-all !important;
     white-space: normal !important;
-    line-height: 14px;
-    font-weight: 600;
+    font-size: 14px;
+    font-weight: 500;
     color: var(--adm-color-white);
     text-align: center;
-    font-size: 14px;
-    font-weight: 700;
   }
   &:hover,
   &:focus {
     color: var(--adm-color-white) !important;
-    background: var(--adm-color-white) !important;
+    background: var(--adm-color-textLv1) !important;
   }
   &:disabled {
     opacity: 0.4;
-    background: var(--adm-color-white);
-    border-radius: 10px;
+    background: var(--adm-color-textLv1);
+    border-radius: 0;
 
     &:hover {
       opacity: 0.4 !important;
