--- a/src/styles/theme/ant-btn.less
+++ b/src/styles/theme/ant-btn.less
@@ -37,15 +37,15 @@
 // 按钮镂空
 .default-btn-ghost {
   background-color: transparent;
-  color: var(--adm-color-light);
+  color: var(--adm-color-primary);
   box-shadow: none;
-  border: 1px solid var(--adm-color-white);
+  border: 1px solid var(--adm-color-primary);
   outline: none;
-  border-radius: 10px;
+  border-radius: 0;
   text-shadow: none;
   box-sizing: none !important;
   &:hover {
-    color: var(--adm-color-light) !important;
+    color: var(--adm-color-primary) !important;
     background-color: transparent !important;
   }
 
@@ -98,6 +98,43 @@
   &:disabled {
     opacity: 0.4;
     background: var(--adm-color-textLv1);
+    border-radius: 0;
+
+    &:hover {
+      opacity: 0.4 !important;
+    }
+  }
+}
+
+//纯色按钮
+.default-btn-solidgrey {
+  background: var(--adm-color-light);
+  color: var(--adm-color-dark);
+  border: none;
+  outline: none;
+  text-shadow: none;
+  border-radius: 0;
+  box-sizing: none !important;
+  > div {
+    //点击阴影
+    display: none !important;
+  }
+  span {
+    word-break: keep-all !important;
+    white-space: normal !important;
+    font-size: 14px;
+    font-weight: 500;
+    color: var(--adm-color-dark);
+    text-align: center;
+  }
+  &:hover,
+  &:focus {
+    color: var(--adm-color-dark) !important;
+    background: var(--adm-color-light) !important;
+  }
+  &:disabled {
+    opacity: 0.4;
+    background: var(--adm-color-light);
     border-radius: 0;
 
     &:hover {
