--- a/public/iconfont/iconfont.css
+++ b/public/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 5069046 */
-  src: url('iconfont.woff2?t=1765344780898') format('woff2'),
-       url('iconfont.woff?t=1765344780898') format('woff'),
-       url('iconfont.ttf?t=1765344780898') format('truetype');
+  src: url('iconfont.woff2?t=1765614727248') format('woff2'),
+       url('iconfont.woff?t=1765614727248') format('woff'),
+       url('iconfont.ttf?t=1765614727248') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,118 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-collected1:before {
+  content: "\e67d";
+}
+
+.icon-logout:before {
+  content: "\e67c";
+}
+
+.icon-About:before {
+  content: "\e673";
+}
+
+.icon-collected:before {
+  content: "\e67b";
+}
+
+.icon-home1:before {
+  content: "\e667";
+}
+
+.icon-QR:before {
+  content: "\e668";
+}
+
+.icon-cart:before {
+  content: "\e66a";
+}
+
+.icon-searcch:before {
+  content: "\e66b";
+}
+
+.icon-Shipment:before {
+  content: "\e66c";
+}
+
+.icon-After-Sales:before {
+  content: "\e66e";
+}
+
+.icon-a-InTransit:before {
+  content: "\e66f";
+}
+
+.icon-setting:before {
+  content: "\e670";
+}
+
+.icon-Address:before {
+  content: "\e672";
+}
+
+.icon-FAQ:before {
+  content: "\e674";
+}
+
+.icon-Feedback:before {
+  content: "\e675";
+}
+
+.icon-edit:before {
+  content: "\e676";
+}
+
+.icon-icon:before {
+  content: "\e677";
+}
+
+.icon-arrow_b:before {
+  content: "\e678";
+}
+
+.icon-Language:before {
+  content: "\e679";
+}
+
+.icon-collect:before {
+  content: "\e67a";
+}
+
+.icon-unpaid:before {
+  content: "\e65e";
+}
+
+.icon-Policy:before {
+  content: "\e65f";
+}
+
+.icon-support:before {
+  content: "\e660";
+}
+
+.icon-Orders:before {
+  content: "\e661";
+}
+
+.icon-add1:before {
+  content: "\e662";
+}
+
+.icon-Reduce:before {
+  content: "\e663";
+}
+
+.icon-mine:before {
+  content: "\e664";
+}
+
+.icon-arrow_s:before {
+  content: "\e665";
 }
 
 .icon-morentouxiang:before {
