--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -2,6 +2,7 @@
   --color-grey: #999;
   --color-price: #ff3000;
   --color-light: #ff6000;
+  --color-yellow: #ff8f1f;
   --color-red: #eb2606;
   --adm-color-white: #fff;
   --adm-color-textLv1: #252834; // 标题
