--- a/src/styles/theme/ant-btn.less
+++ b/src/styles/theme/ant-btn.less
@@ -8,9 +8,20 @@
   border-radius: 0;
   text-shadow: none;
   box-sizing: none !important;
-  > div {
-    //点击阴影
-    display: none !important;
+  // > div {
+  //   //点击阴影
+  //   display: none !important;
+  // }
+  .van-button__content {
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
+    color: var(--adm-color-white);
+    font-family: 'PingFang SC';
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 150%; /* 21px */
   }
   span {
     word-break: keep-all !important;
