--- a/src/styles/vant.less
+++ b/src/styles/vant.less
@@ -7,7 +7,7 @@
     border-radius: 50%;
     border: 1px solid #d1d1d1;
     background: transparent;
-    color: var(--color-light);
+    color: var(--adm-color-primary);
   }
   .van-checkbox__label {
     color: #717378;
@@ -23,10 +23,10 @@
 
 :root {
   /* 点击态的高亮色（很多组件都会用到） */
-  --van-active-color: var(--color-light);
+  --van-active-color: var(--adm-color-primary);
 
   /* Stepper 按钮点击态颜色（部分版本未使用该变量，但留着没坏处） */
-  --van-stepper-button-active-color: var(--color-light);
+  --van-stepper-button-active-color: var(--adm-color-primary);
 }
 
 .my-toast {
