--- a/src/styles/theme/ant-btn.less
+++ b/src/styles/theme/ant-btn.less
@@ -58,6 +58,7 @@
   &:hover {
     color: var(--adm-color-primary) !important;
     background-color: transparent !important;
+    border-color: var(--adm-color-primary) !important;
   }
 
   > div {
@@ -65,6 +66,7 @@
     display: none !important;
   }
   span {
+    color: var(--adm-color-primary);
     word-break: keep-all !important;
     white-space: normal !important;
     font-size: 14px;
