--- a/src/styles/vant.less
+++ b/src/styles/vant.less
@@ -10,7 +10,7 @@
     color: var(--adm-color-primary);
   }
   .van-checkbox__label {
-    color: #717378;
+    color: var(--color-textlv2);
     font-size: 14px;
   }
 }
@@ -99,5 +99,78 @@
   .van-stepper__plus--disabled .van-icon,
   .van-stepper__minus--disabled .van-icon {
     color: var(--color-textlv2); /* 禁用时符号灰色 */
+  }
+}
+
+.van-form {
+  .van-cell {
+    padding: 12px 16px;
+
+    .van-field__error-message {
+      font-size: 12px;
+      line-height: 12px;
+    }
+  }
+
+  .van-field__label {
+    color: var(--adm-color-textLv1);
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  .van-field__control {
+    color: var(--adm-color-textLv1);
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    &::placeholder {
+      color: var(--color-textlv2);
+    }
+  }
+}
+
+.van-picker {
+  .van-picker__title {
+    color: var(--adm-color-textlv2);
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  .van-picker__confirm {
+    color: var(--adm-color-primary);
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  .van-picker__cancel {
+    color: var(--color-textlv2);
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
+
+  .van-picker-column__item {
+    color: var(--color-textlv2);
+    font-family: Roboto;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    &.van-picker-column__item--selected {
+      color: var(--adm-color-primary);
+    }
   }
 }
